[package]
name = "usvgjs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
usvg = "0.45.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"
